# react-native-paste-input

./: package-lock.json  package.json  react-native.config.js  tsconfig.json
android/: build.gradle
android/src/main/java/com/mattermost/pasteinputtext/: PasteTextInputManager.kt
android/src/main/jni/: CMakeLists.txt  PasteTextInputSpecs.cpp  PasteTextInputSpecs.h
android/src/main/jni/react/renderer/components/PasteTextInputSpecs/: ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  Props.cpp  Props.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h
example/: package-lock.json  package.json
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/ReactNativePasteInputExample.xcodeproj/: project.pbxproj
example/src/: App.tsx  Details.tsx
src/: PasteTextInput.tsx
